# smart-traffic-simulator-cpp

./: .gitignore  README.md
SmartTrafficSim/: CMakeLists.txt  Makefile  README.md  SmartTrafficSim  generate_audio.cpp  headless_test.cpp
SmartTrafficSim/include/: controller.h  renderer.h  simulation.h  types.h  vehicle.h
SmartTrafficSim/src/: controller.cpp  main.cpp  renderer.cpp  simulation.cpp  vehicle.cpp
